clang/test/BSC/Negative/OwnedStruct/destructor/invalid_destructor_call.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A {    
   ~A(A this){
   }
   _Public:
   int x; 
};
_Owned struct B {    
   _Public:
   int x; 
   ~B(B this){}
};

int main() {
   A a = {3};
   a.~A(); // expected-error {{'~A' is a private member of 'struct A'}}
   B b = {3};
   B::~B(); // expected-error {{expected identifier}}
  return 0;
}